fix: 修复华为部分设备中文路径下图片闪退问题
修复华为部分设备中文路径下图片闪退问题